Removed unneeded packages. Fixed scrollbar. Built production files.

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,7 @@
+BODY {
+    overflow-y: hidden;
+}
+
 .nav-bar {
     position: fixed;
     top: 0;
